--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #25144d 0%, #0c0c0d 100%);
             min-height: 100vh;
             overflow-x: hidden;
         }
