--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #25144d 0%, #0c0c0d 100%);
+            font-family: 'Courier New', monospace;
+            background: linear-gradient(135deg, #1a0b2e 0%, #0c0c0d 100%);
             min-height: 100vh;
             overflow-x: hidden;
         }
@@ -43,14 +43,15 @@
         }
 
         .card {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(30, 58, 138, 0.3);
             border-radius: 20px;
             padding: 30px;
             margin: 30px 0;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.3);
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
+            border: 1px solid rgba(75, 0, 130, 0.4);
             animation: fadeInUp 0.8s ease;
+            color: white;
         }
 
         .skills-grid {
@@ -61,8 +62,8 @@
         }
 
         .skill-item {
-            background: linear-gradient(45deg, #ff6b6b, #ffa726);
-            color: white;
+            background: linear-gradient(45deg, #1e3a8a, #4B0082);
+            color: #E0E0E0;
             padding: 20px;
             border-radius: 15px;
             text-align: center;
@@ -93,8 +94,8 @@
         }
 
         .project-card {
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
+            background: linear-gradient(135deg, #1e3a8a, #4B0082);
+            color: #E0E0E0;
             padding: 25px;
             border-radius: 15px;
             transition: all 0.3s ease;
@@ -119,8 +120,8 @@
             width: 750px;
             height: 750px;
             border-radius: 20px;
-            border: 5px solid rgba(255,255,255,0.3);
-            box-shadow: 0 0 30px rgba(255,255,255,0.2);
+            border: 5px solid rgba(30, 58, 138, 0.6);
+            box-shadow: 0 0 30px rgba(75, 0, 130, 0.4);
             animation: float 3s ease-in-out infinite;
             margin: 20px auto;
             overflow: hidden;
@@ -135,15 +136,15 @@
 
         .contact-section {
             text-align: center;
-            background: rgba(255,255,255,0.1);
+            background: rgba(30, 58, 138, 0.2);
             padding: 30px;
             border-radius: 15px;
             margin: 30px 0;
         }
 
         .contact-btn {
-            background: linear-gradient(45deg, #667eea, #764ba2);
-            color: white;
+            background: linear-gradient(45deg, #1e3a8a, #4B0082);
+            color: #E0E0E0;
             padding: 15px 30px;
             border: none;
             border-radius: 25px;
@@ -159,7 +160,7 @@
         }
 
         h2 {
-            color: #333;
+            color: white;
             margin-bottom: 20px;
             font-size: 2rem;
             text-align: center;
@@ -199,7 +200,7 @@
         .progress-bar {
             width: 100%;
             height: 10px;
-            background: rgba(255,255,255,0.3);
+            background: rgba(30, 58, 138, 0.3);
             border-radius: 5px;
             margin: 10px 0;
             overflow: hidden;
@@ -207,7 +208,7 @@
 
         .progress-fill {
             height: 100%;
-            background: linear-gradient(90deg, #ff6b6b, #ffa726);
+            background: linear-gradient(90deg, #1e3a8a, #4B0082);
             border-radius: 5px;
             animation: fillBar 2s ease forwards;
         }
@@ -235,11 +236,11 @@
         .stat-number {
             font-size: 2.5rem;
             font-weight: bold;
-            color: #667eea;
+            color: #4B0082;
         }
 
         .stat-label {
-            color: #666;
+            color: white;
             margin-top: 5px;
         }
     </style>
@@ -331,9 +332,9 @@
 
         document.querySelectorAll('.project-card').forEach(card => {
             card.addEventListener('click', function() {
-                this.style.background = 'linear-gradient(135deg, #ff6b6b, #ffa726)';
+                this.style.background = 'linear-gradient(135deg, #1e3a8a, #4B0082)';
                 setTimeout(() => {
-                    this.style.background = 'linear-gradient(135deg, #667eea, #764ba2)';
+                    this.style.background = 'linear-gradient(135deg, #1e3a8a, #4B0082)';
                 }, 200);
             });
         });
