--- a/portfolio.html
+++ b/portfolio.html
@@ -322,10 +322,10 @@
         document.querySelectorAll('.skill-item').forEach(item => {
             item.addEventListener('click', function() {
                 const skill = this.querySelector('h3').textContent;
-                if (skill.includes('🎸') || skill.includes('🥁') || skill.includes('🎤')) {
-                    alert(`${skill} was actualy pretey gud... miss those days 😢`);
+                if (skill.includes('von Halen') || skill.includes('Nirvanus') || skill.includes('Alcohollica')) {
+                    alert(`${skill} was pretie gut ngl mis those dais`);
                 } else {
-                    alert(`You've unlocked the secrets of ${skill}! 🎉`);
+                    alert(`why woold yu clik on ${skill} `);
                 }
             });
         });
