--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
         document.querySelectorAll('.skill-item').forEach(item => {
             item.addEventListener('click', function() {
                 const skill = this.querySelector('h3').textContent;
-                if (skill.includes('von Halen') || skill.includes('Nirvanus') || skill.includes('Alcohollica')) {
+                if (skill.includes('Von Halen') || skill.includes('Nirvanus') || skill.includes('Alcohollica')) {
                     alert(`${skill} was pretie gut ngl mis those dais`);
                 } else {
                     alert(`why woold yu clik on ${skill} `);
